--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-admin-free-react",
+  "name": "react-app",
   "version": "0.1.0",
   "homepage": "https://bootstrapdash.com/demo/star-admin-free/react/template/demo_1/preview",
   "private": true,
